@@ -1,3 +1,10 @@
+Tue Oct 21 14:38:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_typecode/enum_typecode.cpp:
+        * TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
+        * TAO_IDL/be/be_visitor_typecode/union_typecode.cpp:
+          Fixed CB2009 warnings
+
 Tue Oct 21 13:22:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/RTCORBA/Banded_Connections/server.cpp
